--- a/css/catalog.css
+++ b/css/catalog.css
@@ -1,6 +1,13 @@
 .catalog {
     max-width: 320px;
     height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.catalog li {
+    align-self: center;
 }
 
 .catalog img {
