--- a/css/why_choose_us.css
+++ b/css/why_choose_us.css
@@ -10,14 +10,9 @@
     word-wrap:break-word;
     flex-shrink: 0;
     flex-basis:100%;
-    display: block;
     border:0;
     font: inherit;
-    }
-
-  .why_choose_us__background{
-     background-image:url(img/why_choose_us.png);
-     background-position:35.95% 53.05%;
+     background-image: url(../img/why_choose_us/background.jpg);
      background-repeat: no-repeat;
      background-size: cover;
     }
@@ -26,8 +21,12 @@
     width: 300px;
     padding-left: 3px;
     margin-bottom: 30px;
-    text-align: left;
     justify-content: flex-start;
+    text-align: right;
+    display: block;
+    box-sizing: border-box;
+    padding: 90px 24px 90px 24px;
+    min-width: 320px;
   }   
 .why_choose_us__h3{
    position:relative;
@@ -161,8 +160,8 @@ p{
         letter-spacing: 0;}
 }
     @media(max-width:768px){
-        .why_choose_us__background{
-        background-image: url(img/why_choose_us/768.jpg);
+        .why_choose_us{
+        background-image: url(../img/why_choose_us/768.jpg);
         background-position:100% 50.01%;
         background-repeat: no-repeat;
         background-size: cover;
@@ -170,8 +169,8 @@ p{
     }
       
     @media(max-width:1199px){
-        .why_choose_us__background{
-        background-image: url(img/why_choose_us/768-1199.jpg);
+        .why_choose_us{
+        background-image: url(../img/why_choose_us/768-1199.jpg);
         background-position:100% 51.84%;
         background-repeat: no-repeat;
         background-size: cover;
@@ -179,8 +178,8 @@ p{
     }
 
     @media(max-width:1920px){
-        .why_choose_us__background{
-        background-image: url(img/why_choose_us/1200-1920.jpg);
+        .why_choose_us{
+        background-image: url(../img/why_choose_us/1200-1920.jpg);
         background-position:35.94% 53.05%;
         background-repeat: no-repeat;
         background-size: cover;
@@ -188,8 +187,8 @@ p{
     }
 
     @media(max-width:1921px){
-        .why_choose_us__background{
-        background-image: url(img/why_choose_us/1921.jpg);
+        .why_choose_us{
+        background-image: url(../img/why_choose_us/1921.jpg);
         background-position:35.94% 53.05%;
         background-repeat: no-repeat;
         background-size: cover;
@@ -197,8 +196,8 @@ p{
     }
 
     @media(max-width:2560px){
-        .why_choose_us__background{
-        background-image: url(img/why_choose_us/2560.jpg);
+        .why_choose_us{
+        background-image: url(../img/why_choose_us/2560.jpg);
         background-position:35.94% 53.05%;
         background-repeat: no-repeat;
         background-size: cover;
