--- a/css/customization.css
+++ b/css/customization.css
@@ -1,21 +1,29 @@
-.custimization__container {
+.customization-background{
+    background-image: url(../img/customization/mobile-background.jpg);
+    position: relative;
+    position: 42.19% 0% ;
+    object-fit: cover;
+}
+
+.customization__container {
     padding-top: 90px;
     padding-bottom: 90px;
 }
 
-.custimization__container__inner {
+.customization__container__inner {
     padding-right: 24px;
     padding-left: 24px;
 }
 
-.custimization__container__inner__grid {
+.customization__container__inner__grid {
     margin-left: -15px;
     margin-right: -15px;
 }
 
-.custimization__container__inner__grid__top {
+.customization__container__inner__grid__top {
     display: flex;
     flex-wrap: wrap;
+    align-items: flex-start;
     margin-top: 50px;
     padding-left: 15px;
     padding-right: 15px;
@@ -26,7 +34,7 @@
     line-height: 33.6px;
 }
 
-.custimization__text-box__text-top {
+.customization__text-box__text-top {
     margin-top: 25px;
     margin-block-start: 0;
     margin-block-end: 0;
@@ -37,7 +45,7 @@
     line-height: 28.5px;
 }
 
-.custimization__text-box__text-bottom {
+.customization__text-box__text-bottom {
     margin-block-start: 0;
     margin-block-end: 0;
     margin-inline-start: 0;
@@ -53,18 +61,18 @@
   
 }
 
+.customization__button__container{
+    margin:-10px;
+}
 .customization__button__inner {
     width: 100%;
-    margin: 10px;
 }
 
 .customization__button__button {
     box-sizing: border-box;
     display: flex;
-    align-items: center;
-    width: auto;
-    margin: 10px;
-    max-width: 100%;
+    align-items: center;    
+    margin: 10px;    
     padding: 18px 26px 18px 26px;
     border-top: 2px solid rgb(56, 56, 56);
     border-right: 2px solid rgb(56, 56, 56);
@@ -85,3 +93,34 @@
     width: 24px;
     height: 24px;
 }
+@media (min-width:768px) {
+    .customization__subtitle__name {
+        font-size: 41px;
+        line-height: 49.2px;        
+    }
+    .customization__container__inner__grid{
+        display: flex;
+        flex-wrap: nowrap;
+    }
+    .customization__container__inner__grid__top{
+        width: 50%;
+    }
+    .customization__container__empty{
+        width:50%;
+        padding-left: 15px;
+        padding-right: 15px;
+        background-image: url(../img/customization/empty-container-background.jpg);        
+        background-size: cover;
+        background-position:center;
+    }
+}
+@media (min-width: 1200px) {
+    .customization__container__inner__grid{
+      max-width: 1200px;
+      margin: auto;
+    }
+    .customization__subtitle__name {
+        font-size: 48px;
+        line-height: 56.7px;        
+    }
+  }
