--- a/css/customization.css
+++ b/css/customization.css
@@ -74,24 +74,23 @@
     align-items: center;    
     margin: 10px;    
     padding: 18px 26px 18px 26px;
-    border-top: 2px solid rgb(56, 56, 56);
-    border-right: 2px solid rgb(56, 56, 56);
-    border-bottom: 2px solid rgb(56, 56, 56);
-    border-left: 2px solid rgb(56, 56, 56);
-}
-
-.customization__button__text {
+    border-style: solid;
+    border-color: var(--font-color-sample-1);  
+    cursor: pointer;  
     font-family: var(--font-nunito-family);
     font-size: 16.5px;
     letter-spacing: normal;
     line-height: 16.5px;
     font-weight: 700;
     font-stretch: 100%;
+    color: var(--font-color-sample-1);
 }
-
-.customization__icon__img {
-    width: 24px;
-    height: 24px;
+.customization__button__button:hover{
+    background-color: var(--font-color-sample-1);
+    color: white;
+    border-color: var(--font-color-sample-1);
+    transition: 0.3s;
+    
 }
 @media (min-width:768px) {
     .customization__subtitle__name {
