Added background Svitlana block

--- a/css/why_choose_us.css
+++ b/css/why_choose_us.css
@@ -4,7 +4,11 @@
     position: 42.19% 0% ;
     object-fit: cover;
 }
-
+.why_choose_us__first {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
 .why_choose_us__container {
     padding-top: 90px;
     padding-bottom: 90px;
@@ -106,5 +110,52 @@
     color: white;
     border-color: var(--font-color-sample-1);
     transition: 0.3s;
-    
 }
+
+.why_choose_us__icon {
+    width:100%;
+    display: none;
+  }
+
+  @media (min-width: 600px) {
+    .why_choose_us__icon {
+      display: block;
+    }
+    .why_choose_us__girl {
+      height: auto;
+      width: 650px;
+      margin-left: 40px;
+      margin-right: 60px;
+    } 
+  }
+@media (min-width:768px) {
+    .why_choose_us__subtitle__name {
+        font-size: 41px;
+        line-height: 49.2px;        
+    }
+    .why_choose_us__container__inner__grid{
+        display: flex;
+        flex-wrap: nowrap;
+    }
+    .why_choose_us__container__inner__grid__top{
+        width: 50%;
+    }
+    .why_choose_us__container__empty{
+        width:50%;
+        padding-left: 15px;
+        padding-right: 15px;
+        background-image: url(../img/why_choose_us/why_choose_us__background.jpg);        
+        background-size: cover;
+        background-position:center;
+    }
+}
+@media (min-width: 1200px) {
+    .why_choose_us__container__inner__grid{
+      max-width: 1200px;
+      margin: auto;
+    }
+    .why_choose_us__subtitle__name {
+        font-size: 48px;
+        line-height: 56.7px;        
+    }
+  }
