Changed bitton Svitlana block

--- a/css/why_choose_us.css
+++ b/css/why_choose_us.css
@@ -72,40 +72,24 @@
     position: absolute; top: 0; left: 0;
     color: var(--dash-color);
 }
-.why_choose_us__button {
-    margin-top: 35px;
-  
-}
 
-.why_choose_us__button__container{
-    margin:-10px;
-}
-.why_choose_us__button__inner {
-    width: 100%;
+.why_choose_us__button {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-top: 20px;
 }
 
 .why_choose_us__button__button {
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;    
-    margin: 10px;    
-    padding: 18px 26px 18px 26px;
+    font-family: var(--font-nunito-family);
     border-style: solid;
     border-color: var(--font-color-sample-1);  
-    cursor: pointer;  
-    font-family: var(--font-nunito-family);
-    font-size: 16.5px;
-    letter-spacing: normal;
-    line-height: 16.5px;
-    font-weight: 700;
-    font-stretch: 100%;
-    color: var(--font-color-sample-1);
-}
-.why_choose_us__button__button:hover {
     background-color: var(--font-color-sample-1);
+    padding: 25px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     color: white;
-    border-color: var(--font-color-sample-1);
-    transition: 0.3s;
+    text-decoration: none;
 }
 
 .why_choose_us__icon {
