--- a/css/history.css
+++ b/css/history.css
@@ -117,3 +117,10 @@
         width: 46px;
     }
 }
+
+@media (min-width: 1200px) {
+    .history {
+        max-width: 1200px;
+        margin: auto;
+    }
+}
