--- a/css/why_choose_us.css
+++ b/css/why_choose_us.css
@@ -1,7 +1,7 @@
 .why_choose_us__background {
     background-image: url(../img/why_choose_us/mobile-background.jpg);
     position: relative;
-    position: 42.19% 0% ;
+    position: 35.94% 53.05% ;
     object-fit: cover;
 }
 
@@ -29,9 +29,28 @@
     padding-right: 15px;
 }
 
-.why_choose_us__subtitle__name {
-    font-size: 28px;
-    line-height: 33.6px;
+.why_choose_us__title__name{
+    color: var(--font-color-sample-2);
+    font-stretch: 100%;
+    font-style: normal;
+    font-weight: 700;
+    text-align: left;
+    vertical-align: baseline;
+    line-height: 16.8px;
+}
+
+
+.why_choose_us__slogan__name{
+    color: #898989;
+    font-size: inherit;
+    vertical-align: baseline;
+    text-transform: none;
+    text-align: left;
+    font-size: 19px;
+    font-family: var(--font-nunito-family);
+    font-stretch: 100%;
+    font-style: normal;
+    line-height: 28.5px;
 }
 
 .why_choose_us__text-box__text-top {
@@ -59,9 +78,27 @@
 .why_choose_us__dash {
     color: var(--dash-color);
 }
+.why_choose_us__subtitle__name {
+    line-height: 33.6px;
+}
+
 .why_choose_us__text__list{
     list-style: none;
 }
+
+.why_choose_us__text__list-box__title{
+    color: #383838;
+    font-size: inherit;
+    font-family: var(--font-nunito-family);
+    font-size: 22px;
+    font-stretch: 100%;
+    font-style: normal;
+    font-weight: 600;
+    vertical-align: baseline;
+    text-align: left;
+    line-height: 33px;
+}
+
 .why_choose_us__text__list > .why_choose_us__text__list__item{
     padding-left: 20px;
     position: relative;
@@ -71,6 +108,33 @@
     content: '✔';
     position: absolute; top: 0; left: 0;
     color: var(--dash-color);
+}
+
+.why_choose_us__text__list__item{
+    color: var(--main color);
+    font-family: var(--font-nunito-family);
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 400;
+    text-align: left;
+    vertical-align: baseline;
+    line-height: 25.5px;
+}
+.why_choose_us__paragraph{
+    color: #747474;
+    font-family: var(--font-nunito-family);
+    font-size: 17px;
+    font-stretch:100%;
+    font-weight: 400;
+    margin-block-start: 20px;
+    margin-top: 20px;
+    max-width: 100%;
+    position:relative;
+    text-align: left;
+    text-decoration-style: solid;
+    text-decoration-thickness: auto;
+    vertical-align: baseline;
+    line-height: 25.5px;
 }
 
 .why_choose_us__button {
