--- a/css/why_choose_us.css
+++ b/css/why_choose_us.css
@@ -39,9 +39,7 @@
     line-height: 16.8px;
 }
 
-
 .why_choose_us__slogan__name{
-    color: #898989;
     font-size: inherit;
     vertical-align: baseline;
     text-transform: none;
@@ -52,23 +50,109 @@
     font-style: normal;
     line-height: 28.5px;
 }
-
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    height: 100px;
+    width: 100px;
+    position: relative;
+    transform: scale(1);
+  }
+  
+  .circle {
+    background-color: white;
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
+  
+  .gradient-circle {
+    background: conic-gradient(
+      #b0dde2 0%,
+      #caeeec 40%,
+      #84d8da 40%,
+      #a0f0e4 60%,
+      #e0d49e 60%,
+      #ccc09e 100%
+    );
+    height: 120px;
+    width: 120px;
+    z-index: -2;
+    border-radius: 50%;
+    position: absolute;
+    top: -10px;
+    left: -10px;
+  }
+  
+  .pointer {
+    background-color: rgb(240, 181, 18);
+    border-radius: 50%;
+    height: 20px;
+    width: 20px;
+    display: block;
+  }
+  
+  .pointer-container {
+    position: absolute;
+    top: -40px;
+    left: 40px;
+    width: 20px;
+    height: 90px;
+    animation: rotate 7.5s linear forwards infinite;
+    transform-origin: bottom center;
+  }
+  
+  @keyframes rotate {
+    from {
+      transform: rotate(0deg);
+    }
+  
+    to {
+      transform: rotate(360deg);
+    }
+  }
+  
+  .container.grow {
+    animation: grow 3s linear forwards;
+  }
+  
+  @keyframes grow {
+    from {
+      transform: scale(1);
+    }
+  
+    to {
+      transform: scale(1.2);
+    }
+  }
+  
+  .container.shrink {
+    animation: shrink 3s linear forwards;
+  }
+  
+  @keyframes shrink {
+    from {
+      transform: scale(1.2);
+    }
+  
+    to {
+      transform: scale(1);
+    }
+  }
 .why_choose_us__text-box__text-top {
     margin-top: 25px;
-    margin-block-start: 0;
-    margin-block-end: 0;
-    margin-inline-start: 0;
-    margin-inline-end: 0;
     font-size: 19px;
     font-family: var(--font-nunito-family);
     line-height: 28.5px;
 }
 
 .why_choose_us__text-box__text-bottom {
-    margin-block-start: 0;
-    margin-block-end: 0;
-    margin-inline-start: 0;
-    margin-inline-end: 0;
     margin-top: 25px;
     font-size: 17px;
     font-family: var(--font-nunito-family);
@@ -111,7 +195,6 @@
 }
 
 .why_choose_us__text__list__item{
-    color: var(--main color);
     font-family: var(--font-nunito-family);
     font-size: 17px;
     font-style: normal;
@@ -126,13 +209,10 @@
     font-size: 17px;
     font-stretch:100%;
     font-weight: 400;
-    margin-block-start: 20px;
     margin-top: 20px;
     max-width: 100%;
     position:relative;
     text-align: left;
-    text-decoration-style: solid;
-    text-decoration-thickness: auto;
     vertical-align: baseline;
     line-height: 25.5px;
 }
