--- a/css/customization-form.css
+++ b/css/customization-form.css
@@ -32,6 +32,7 @@
     justify-content: flex-end;
     padding-right: 20px;
     padding-top: 20px;
+    cursor: pointer;
   }
   .form__inner__container{
       display: flex;
@@ -121,4 +122,10 @@
     color: white;
     border-color: #212121;
     transition: 0.3s;    
+}
+
+.count__test{
+    padding-bottom: 10px;
+    padding-top: 10px;
+    text-align: center;
 }
