--- a/css/collection.css
+++ b/css/collection.css
@@ -1,6 +1,25 @@
 /* Mobile Version starts here
 Performed by Roman Hrytsyshyn */
 
+#no-display {
+    display: none;
+}
+
+.cards__carousel {
+    display: grid;
+    grid-template-columns: 0.5fr 9fr 0.5fr;
+}
+
+.cards__carousel-back {
+    border: none;
+    background-color: transparent;
+}
+
+.cards__carousel-forward {
+    border-style: none;
+    background-color: transparent;
+}
+
 .collection {
     padding-bottom: 90px;
     padding-top: 90px;
@@ -88,6 +107,7 @@ Performed by Roman Hrytsyshyn */
         display: none;
     }
 }
+
 /* Mobile Version ends here
 Performed by Roman Hrytsyshyn */
 
@@ -104,12 +124,22 @@ Performed by Roman Hrytsyshyn */
     .collection__slogan {
         font-size: 48px;
     }
+
+    .cards__carousel-slide-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
 }
 
 @media (min-width: 990px) {
     .collection__cards {
         display: grid;
         flex-direction: column;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    .cards__carousel-slide-container {
+        display: grid;
         grid-template-columns: 1fr 1fr 1fr;
     }
 }
