--- a/css/customization-form.css
+++ b/css/customization-form.css
@@ -1,3 +1,6 @@
+body.open{
+    overflow-y: hidden;
+}
 .customization__form{   
     display: none;   
     z-index: 10;
@@ -10,7 +13,9 @@
     overflow-y: auto;
     overflow-x: hidden;  
 }
-
+.customization__form.open{
+    display: block;    
+}
 .form__container__close{
     display: flex;
     justify-content: flex-end;
