--- a/css/customization-form.css
+++ b/css/customization-form.css
@@ -148,3 +148,9 @@ body.open {
 textarea {
   resize: none;
 }
+.contact-form-status{
+  color:var(--main-color);
+  padding-top: 15px;
+  font-size: 20px;
+  text-align: center;
+}
