--- a/css/customization.css
+++ b/css/customization.css
@@ -1,119 +1,120 @@
-.customization-background{
-    background-image: url(../img/customization/mobile-background.jpg);
-    position: relative;
-    position: 42.19% 0% ;
-    object-fit: cover;
+.customization-background {
+  background-image: url(../img/customization/mobile-background.jpg);
+  position: relative;
+  position: 42.19% 0%;
+  object-fit: cover;
 }
 
 .customization__container {
-    padding-top: 90px;
-    padding-bottom: 90px;
+  padding-top: 90px;
+  padding-bottom: 90px;
 }
 
 .customization__container__inner {
-    padding-right: 24px;
-    padding-left: 24px;
+  padding-right: 24px;
+  padding-left: 24px;
 }
 
 .customization__container__inner__grid {
-    margin-left: -15px;
-    margin-right: -15px;
+  margin-left: -15px;
+  margin-right: -15px;
 }
 
 .customization__container__inner__grid__top {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    margin-top: 50px;
-    padding-left: 15px;
-    padding-right: 15px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  margin-top: 50px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .customization__subtitle__name {
-    font-size: 28px;
-    line-height: 33.6px;
-    margin-top: 20px;
+  font-size: 28px;
+  line-height: 33.6px;
+  margin-top: 20px;
 }
 
 .customization__text-box__text-top {
-    margin-top: 25px;    
-    font-size: 19px;
-    font-family: var(--font-nunito-family);
-    line-height: 28.5px;
+  margin-top: 25px;
+  font-size: 19px;
+  font-family: var(--font-nunito-family);
+  line-height: 28.5px;
 }
 
-.customization__text-box__text-bottom {  
-    margin-top: 25px;
-    font-size: 17px;
-    font-family: var(--font-nunito-family);
-    line-height: 25.5px;
+.customization__text-box__text-bottom {
+  margin-top: 25px;
+  font-size: 17px;
+  font-family: var(--font-nunito-family);
+  line-height: 25.5px;
 }
 
 .customization__button {
-    margin-top: 35px;
-  
+  margin-top: 35px;
 }
 
-.customization__button__container{
-    margin:-10px;
+.customization__button__container {
+  margin: -10px;
 }
 .customization__button__inner {
-    width: 100%;
+  width: 100%;
 }
 
 .customization__button__button {
-    box-sizing: border-box;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  margin: 10px;
+  padding: 18px 26px 18px 26px;
+  border-style: solid;
+  border-color: var(--font-color-sample-1);
+  cursor: pointer;
+  font-family: var(--font-nunito-family);
+  font-size: 16.5px;
+  letter-spacing: normal;
+  line-height: 16.5px;
+  font-weight: 700;
+  font-stretch: 100%;
+  color: var(--font-color-sample-1);
+  background-color: transparent;
+}
+.customization__button__button:hover {
+  background-color: var(--font-color-sample-1);
+  color: white;
+  border-color: var(--font-color-sample-1);
+  transition: 0.3s;
+}
+@media (min-width: 768px) {
+  .customization__subtitle__name {
+    font-size: 41px;
+    line-height: 49.2px;
+  }
+  .customization__container__inner__grid {
     display: flex;
-    align-items: center;    
-    margin: 10px;    
-    padding: 18px 26px 18px 26px;
-    border-style: solid;
-    border-color: var(--font-color-sample-1);  
-    cursor: pointer;  
-    font-family: var(--font-nunito-family);
-    font-size: 16.5px;
-    letter-spacing: normal;
-    line-height: 16.5px;
-    font-weight: 700;
-    font-stretch: 100%;
-    color: var(--font-color-sample-1);
-    background-color: transparent;
-}
-.customization__button__button:hover{
-    background-color: var(--font-color-sample-1);
-    color: white;
-    border-color: var(--font-color-sample-1);
-    transition: 0.3s;
-    
-}
-@media (min-width:768px) {
-    .customization__subtitle__name {
-        font-size: 41px;
-        line-height: 49.2px;        
-    }
-    .customization__container__inner__grid{
-        display: flex;
-        flex-wrap: nowrap;
-    }
-    .customization__container__inner__grid__top{
-        width: 50%;
-    }
-    .customization__container__empty{
-        width:50%;
-        padding-left: 15px;
-        padding-right: 15px;
-        background-image: url(../img/customization/empty-container-background.jpg);        
-        background-size: cover;
-        background-position:center;
-    }
+    flex-wrap: nowrap;
+  }
+  .customization__container__inner__grid__top {
+    width: 50%;
+  }
+  .customization__container__empty {
+    width: 50%;
+    padding-left: 15px;
+    padding-right: 15px;
+    background-image: url(../img/customization/empty-container-background.jpg);
+    background-size: cover;
+    background-position: center;
+  }
 }
 @media (min-width: 1200px) {
-    .customization__container__inner__grid{
-      max-width: 1200px;
-      margin: auto;
-    }
-    .customization__subtitle__name {
-        font-size: 48px;
-        line-height: 56.7px;        
-    }
+  .customization__container__inner__grid {
+    max-width: 1200px;
+    margin: auto;
   }
+  .customization__subtitle__name {
+    font-size: 48px;
+    line-height: 56.7px;
+  }
+}
+.customization__dash {
+  color: var(--dash-color);
+}
