--- a/css/header.css
+++ b/css/header.css
@@ -32,32 +32,34 @@ Mobile Version */
 
 .burger__wrapper {
     display: none;
-    visibility: hidden;
+    visibility: hidden;  
 }
 
 .burger__wrapper.active {
     display: contents;
     visibility: visible;
-    height: 100vh;
-    background-color: var(--dash-color);
-    margin-top: 0;
-    padding-top: 0;
-    margin-bottom: 1000px;
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;  
 }
 
 .burger__navigation-menu-points {
+    display: contents;
+    visibility: visible;
+}
+
+.burger__navigation-menu-points.active {
+    align-items: center;
+    background-color: var(--dash-color);
+    bottom: 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    height: 100vh;
+    justify-content: flex-start;
+    left: 0; 
+    padding-top: 100px;
+    position: fixed;
+    right: 0;
     text-align: center;
-    align-items: center;
-    margin-top: 150px;
-    z-index: 77;
+    top: 0;
+    z-index: 77; 
 }
 
 .burger__nav-link {
