--- a/css/trendy.css
+++ b/css/trendy.css
@@ -46,7 +46,7 @@
 .trendy__subtitle__name {
     line-height: 33.6px;
 }
-.countdown {
+.trendy__countdown {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -56,20 +56,20 @@
     width: 100%;
 }
 
-.countdown-item {
+.trendy__countdown-item {
     flex-grow: 4;
     border: 1px solid var(--countdown-border);
     border-radius: 5px;
     margin-bottom: 80px;
 }
 
-.style-countdown {
-    font-family: Bebas Neue,cursive;
+.trendy__style-countdown {
+    font-family:PT Sans,solid ;
     font-size: 36px;
     font-weight: 400;
 }
 
-.countdown-text {
+.trendy__countdown-text {
     font-family: PT Sans,sans-serif;
     font-size: 18px;
     color: var(--font-color-background);
@@ -77,14 +77,16 @@
     text-align: center;
 }
 
-.style-countdown, .countdown-text {
+.trendy__style-countdown, .trendy__countdown-text {
     color: inherit;
     fill: currentColor;
     text-anchor: middle;
 }
-.trendy__box {
-    padding-top: 20px;  
+
+.trendy__trendy__box {
+    padding-top: 40px;  
 }
+
 .trendy__buttons {
     display: flex;
     flex-direction: column;
