--- a/css/history.css
+++ b/css/history.css
@@ -124,3 +124,10 @@
         margin: auto;
     }
 }
+
+.history__clock {
+    margin: 10px auto;
+    width: 100px;
+    background-color: rgb(248, 243, 241);
+    color: rgb(116, 116, 116);
+}
