Changed button Svitlana block

--- a/css/trendy.css
+++ b/css/trendy.css
@@ -126,7 +126,12 @@
     color: white;
     border-color: var(--font-color-sample-1);
 }
-
+@keyframes glowing {
+    0% { background-color: #2ba805; box-shadow: 0 0 3px #2ba805; }
+    50% { background-color: #49e819; box-shadow: 0 0 10px #49e819; }
+    100% { background-color: #2ba805; box-shadow: 0 0 3px #2ba805; }
+    }
+    
 @media (min-width:768px) {
     .trendy__subtitle__name {
         font-size: 41px;
