--- a/css/catalog.css
+++ b/css/catalog.css
@@ -1,3 +1,12 @@
+.catalog {
+  margin: 15px;
+  min-width: 320px;
+}
+
+.dash {
+  color: var(--dash-color);
+}
+
 .catalog__header {
   text-align: center;
 }
@@ -29,20 +38,25 @@
   color: var(--main-color);
 }
 
-.catalog {
-  margin: 15px;
-}
-
-.catalog__all_body {
+.catalog__body {
   display: grid;
-  grid-template-columns: 1fr 8fr 1fr;
+  grid-template-columns: 1fr 10fr 1fr;
 }
 
-.catalog__all_body_button_back,
-.catalog__all_body_button_forward {
+.catalog__body button {
   border: none;
   background-color: transparent;
+  align-self: center;
 }
+
+.catalog_carousel img {
+  width: 100%;
+  height: 450px;
+  object-fit: cover;
+}
+
+/* @media (min-width: 600px) {
+} */
 
 /* .catalog {
     max-width: 420px;
