--- a/css/gallery-modal-carousel.css
+++ b/css/gallery-modal-carousel.css
@@ -38,7 +38,8 @@
     padding-left: 20px;
     padding-right: 20px;
     margin: auto;
-    max-width: 1200px;
+    max-width: 900px;
+    max-height: 100%;
 }
 
 .gallery-carousel__images-forward {
