--- a/css/catalog.css
+++ b/css/catalog.css
@@ -49,11 +49,27 @@
   align-self: center;
 }
 
-.catalog_carousel img {
+.img_container {
+  position: relative;
+  padding-bottom: 170%;
+  height: 0;
+  overflow: hidden;
+}
+
+.img_container img {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: 450px;
+  height: 100%;
   object-fit: cover;
 }
+
+/* @media (min-width: 420px) {
+  .catalog_carousel img {
+    height: 500px;
+  }
+} */
 
 /* @media (min-width: 600px) {
 } */
