--- a/css/common.css
+++ b/css/common.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;400&family=Rufina&display=swap');
 
+body {
+    max-width: 1200px;
+    margin: auto;
+}   
+
 * {
     margin: 0;
     padding: 0;
