--- a/css/common.css
+++ b/css/common.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;400&family=Rufina&display=swap');
 
-body {
+/* body {
     max-width: 1200px;
     margin: auto;
-}   
+}    */
 
 * {
     margin: 0;
