--- a/css/trendy.css
+++ b/css/trendy.css
@@ -1,7 +1,7 @@
 .trendy__background {
     background-image: url(../img/trendy/trendy.png);
-    position: relative;
-    position: 35.94% 53.05% ;
+    background-position: relative;
+    background-position: 35.94% 53.05% ;
     transition: opacity;
     height: 535px;
 }
