commented position atributes in hy_choose_us.css, customization.css, trendy.css

--- a/css/customization.css
+++ b/css/customization.css
@@ -1,7 +1,7 @@
 .customization-background {
   background-image: url(../img/customization/mobile-background.jpg);
   position: relative;
-  position: 42.19% 0%;
+  /* position: 42.19% 0%; */
   object-fit: cover;
 }
 
